# pixelsort-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: image.h  sorter.h
src/: image.cpp  main.cpp  sorter.cpp
tests/: test_main.cpp
